--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -44,32 +44,108 @@ __BU_MAIN_ARGS__PRINT_FFL__MSG,"This variable stores the message that gives the 
 ,,,
 __BU_MAIN_ARGS__PRINT_FFL_ERROR_OCCURED__MSG,This variable stores the message that gives the location of an error for the arguments controller functions,"The error occured in the %s file, at function %s, on line %s, during the checking of the %s function",
 ,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_PARAM_VAL_NOT_POS_INT,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_PARAM_VAL_NOT_POS_INT__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY__ADVICE,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY,,,
-__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG,This variable stores the message that ,THE FUNCTION %s NEEDS AN ARGUMENT,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG__ADVICE,This variable stores the message that ,Please pass only one argument to the %s function,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS,This variable stores the message that ,THE FUNCTION %s NEEDS %s ARGUMENTS,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS__ADVICE,This variable stores the message that ,Please pass %s arguments to the %s function,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS,This variable stores the message that ,THE FUNCTION %s HAS NOT ENOUGH ARGUMENTS,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS__ADVICE,This variable stores the message that ,Please pass %s more arguments to the %s function,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS,This variable stores the message that ,THE FUNCTION %s HAS TOO MUCH ARGUMENTS,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS__ADVICE,This variable stores the message that ,Please remove %s arguments to the %s function,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT,This variable stores the message that ,"THE $p_funcname FUNCTION'S ARGUMENT COUNTER $(BU::DechoHighlightVar ""$(echo -n '$')p_argcount"") PARAMETER'S VALUE IS NOT A POSITIVE INTEGER",
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT__ADVICE,This variable stores the message that ,"The function %s first argument %s's value needs to be an integer, since it is an argument counter",
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT,This variable stores the message that ,THE %s FUNCTION'S AWAITED ARGUMENTS COUNTER %s PARAMETER'S VALUE IS NOT A POSITIVE INTEGER,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT__ADVICE,This variable stores the message that ,"The function %s second argument %s's value needs to be an integer, since it is an argument limit",
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY,This variable stores the message that ,THE %s FUNCTION'S %s PARAMETER HAS NO VALUE,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY__ADVICE,This variable stores the message that ,"The function %s first argument %s's value needs to be an integer, since it is an argument counter",
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY,This variable stores the message that ,THE %s FUNCTION'S %s PARAMETER HAS NO VALUE,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY__ADVICE,This variable stores the message that ,"The function %s second argument %s's value needs to be an integer, since it is an argument limit",
 ,,,
-__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_PARENT__Z,,,
-__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_CHILD__Z,,,
-__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__Z,,,
-__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__DF,,,
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_PARENT__Z,This variable stores the message that ,The function %s needs a function passed as first argument to work properly (mandatory argument),
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_CHILD__Z,This variable stores the message that ,The function %s needs a function passed as second argument to work properly (mandatory argument),
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__Z,This variable stores the message that ,The function %s needs a function passed as third argument to work properly (mandatory argument),
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__DF,This variable stores the message that ,You need to precise if what you want to create is a directory or a file (mandatory argument),
 ,,,
-__BU_MAIN_ARGS__CMDS__GetCommandPath__P_CMD__Z,,,
+__BU_MAIN_ARGS__CMDS__GetCommandPath__P_CMD__Z,This variable stores the message that ,You must specify the name of the command whose path you want to know (mandatory argument),
 ,,,
-__BU_MAIN_ARGS__DECHO__Decho__P_STRING__Z,,,
-__BU_MAIN_ARGS__DECHO__Decho__P_NEW_BG_COLOR__INTPOS,,,
-__BU_MAIN_ARGS__DECHO__Decho__P_NEW_TEXT_COLOR__INTPOS,,,
+__BU_MAIN_ARGS__DECHO__Decho__P_STRING__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__DECHO__Decho__P_NEW_BG_COLOR__INTPOS,This variable stores the message that ,"Please pass a positive integer as text color code, as second argument for the %s function (optional argument)",
+__BU_MAIN_ARGS__DECHO__Decho__P_NEW_TEXT_COLOR__INTPOS,This variable stores the message that ,"Please pass a positive integer as background color code, as second argument for the %s function (optional argument)",
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__ProcessingDir__P_FUNCTION__Z,This variable stores the message that ,Please pass a function's name as first argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__ProcessingDir__P_PARENT__Z,This variable stores the message that ,Please pass a valid parent directory path as second argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__ProcessingDir__P_NAME__Z,This variable stores the message that ,Please pass the name of the folder to process as third argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__OverwriteDir__P_PATH__Z,This variable stores the message that ,Please pass the path of the directory to overwrite as argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__OverwriteDir__P_PATH__D,This variable stores the message that ,Please pass the correct path of the directory to overwrite as argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__Make__P_PARENT__Z,This variable stores the message that ,Please pass the path of the new directory's parent folder as first argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__Make__P_PARENT__D,This variable stores the message that ,Please pass a valid parent directory path as first argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__Make__P_NAME__Z,This variable stores the message that ,Please pass the name of the directory to create as second argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__MakePath__P_PATH__Z,This variable stores the message that ,Please pass the full path of the directory to create as first argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__MakePath__P_OVERWRITE__,This variable stores the message that ,Please pass the valid string %s that allows overwriting the %s directory (optional argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__GetDirectoryName__P_PATH__Z,This variable stores the message that ,The %s function takes a path as argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__GetDirectoryPath__P_PATH__Z,This variable stores the message that ,The %s function takes a path as argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__GetParentDirectoryName__P_PATH__Z,This variable stores the message that ,Please pass the path of the directory to overwrite as argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__DIRECTORIES__GetDirectoryPath__P_PATH__Z,This variable stores the message that ,Please pass the path of the directory to overwrite as argument (mandatory argument),
+__BU_MAIN_ARGS__DIRECTORIES__GetDirectoryPath__P_ITERATIONS__INTPOS,This variable stores the message that ,Please pass a positive integer as number of iterations (mandatory argument),
+,,,
+__BU_MAIN_ARGS__ERRORS__SetLastReturnValue__P_CODE__Z,This variable stores the message that ,"Please pass a valid integer value, from %s to %s, as function return code (mandatory argument)",
+__BU_MAIN_ARGS__ERRORS__SetLastReturnValue__P_CODE__INTPOS,This variable stores the message that ,"Please pass a valid integer value, from %s to %s, as function return code (mandatory argument)",
+,,,
+__BU_MAIN_ARGS__FILES__ProcessingFile__P_FUNCTION__Z,This variable stores the message that ,Please pass a valid file processing function as first argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__FILES__OverwriteFile__P_PATH__Z,This variable stores the message that ,Please pass the path of the directory to overwrite as first argument (mandatory argument),
+__BU_MAIN_ARGS__FILES__OverwriteFile__P_PATH__D,This variable stores the message that ,Please pass the correct path of the directory to overwrite as first argument (mandatory argument),
+__BU_MAIN_ARGS__FILES__OverwriteFile__P_AUTHORIZATION__Z,This variable stores the message that ,Please enter a valid value for the overwrite authorization as second argument (mandatory argument),
+,,,
+__BU_MAIN_ARGS__FILES__Make__P_PARENT__Z,This variable stores the message that ,Please pass the path of the new file's parent folder as first argument (mandatory argument),
+__BU_MAIN_ARGS__FILES__Make__P_PARENT__D,This variable stores the message that ,Please pass a valid parent directory path as first argument (mandatory argument),
+__BU_MAIN_ARGS__FILES__Make__P_NAME__Z,This variable stores the message that ,Please pass the name of the file to create as second argument (mandatory argument),
+__BU_MAIN_ARGS__FILES__Make__P_NAME__FS_MAX_SIZE_TOO_LONG,This variable stores the message that ,THE FILE NAME IS TOO LONG FOR THIS FILESYSTEM,
+__BU_MAIN_ARGS__FILES__Make__P_NAME__FS_MAX_SIZE_TOO_LONG__ADVICE,This variable stores the message that ,Please give a name length smaller than %s bytes,
+,,,
+__BU_MAIN_ARGS__FILES__MakePath__P_PATH_Z,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__FILES__SetLastAccess__P_FILEPATH__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILES__SetLastAccess__P_FILEPATH__F,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILES__SetLastAccess__P_FAKEDATE__Z,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__FILESYSTEM__IsPartitionFull__P_FILEFS__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__IsPartitionFull__P_FILEFS__DF,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__FILESYSTEM__GetFSInfos__P_PATH__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__GetFSInfos__P_PATH__DF,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__FILESYSTEM__Chown__P_CURRENT_OWNER__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__Chown__P_NEW_OWNER__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__Chown__P_PATH__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__Chown__P_PATH__DF,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__FILESYSTEM__ChownRec__P_CURRENT_OWNER__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__ChownRec__P_NEW_OWNER__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__ChownRec__P_PATH__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__FILESYSTEM__ChownRec__P_PATH__DF,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__TEXT__CutFromDelim__P_STRING__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__CutFromDelim__P_DELIMTYPE__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__CutFromDelim__P_DELIMTYPE__ALPHASTR,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__CutFromDelim__P_DELIMITER__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__CutFromDelim__P_ITERATIONS__INTPOS,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__TEXT__GetCharacterOccurences__P_STRING__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetCharacterOccurences__P_TARGET__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetCharacterOccurences__P_TARGET__ALPHANUMCHAR,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__TEXT__GetSubStringBeforeDelim__P_TARGET__P_STRING__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetSubStringBeforeDelim__P_TARGET__P_DELIM__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetSubStringBeforeDelim__P_TARGET__P_DELIM__ALPHANUMCHAR,This variable stores the message that ,,
+,,,
+__BU_MAIN_ARGS__TEXT__GetSubStringOccurences__P_TARGET__P_STRING__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetSubStringOccurences__P_TARGET__P_DELIM__Z,This variable stores the message that ,,
+__BU_MAIN_ARGS__TEXT__GetSubStringOccurences__P_TARGET__P_DELIM__ALPHANUMCHAR,This variable stores the message that ,,
