Fixed a missing ':' in the BU::Main::Status<...> functions names

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -479,7 +479,7 @@ avant chaque liste).
 
 
 \begin{justify}
-    Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}BU::Main:Status::ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.
+    Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}BU::Main::Status::ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.
 \end{justify}
 
 \begin{justify}
